Hack to avoid button overlap on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@ body {
 .actions {
     position: absolute;
     right: 16px;
-    top: 300px;
+    top: 20vh;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
